--- a/docs/docs/how-to/logging/log-context.mdx
+++ b/docs/docs/how-to/logging/log-context.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_position: 3
+sidebar_position: 5
 title: Use context with logs
 ---
 
@@ -78,9 +78,9 @@ Then, it returns a `Context` in which these local and global fields are mutable.
 
 :::info Technical Detail
 
-Actually, this call to `log.InitContext()` is not required because gosoline will have already initialized the `Context` earlier in the request lifecycle. In this case, the `ctx` you pass to `log.InitContext()` is returned, unchanged. Therefore, `localctx` and `ctx` are the same, so you could have passed `ctx` to `truncate()` instead.
+Actually, this call to `log.InitContext()` is not required because gosoline will have already initialized the `Context` earlier in the request lifecycle (specifically, in the HTTP middleware). In this case, the `ctx` you pass to `log.InitContext()` is returned, unchanged. Therefore, `localctx` and `ctx` are the same, so you could have passed `ctx` to `truncate()` instead.
 
-However, this example illustrates where to call `log.InitContext()` if you were to create or receive a `Context` from somewhere else. If you initialized the `Context` inside `truncate()`, the log-related fields would go out of scope when the function returns. Instead, you initilize the `Context` and pass it in, so you can make use of the log-related fields later.
+However, this example illustrates where to call `log.InitContext()` if you were to create or receive a `Context` from somewhere else (e.g., in a background job or CLI command). If you initialized the `Context` inside `truncate()`, the log-related fields would go out of scope when the function returns. Instead, you initilize the `Context` and pass it in, so you can make use of the log-related fields later.
 
 :::
 
