docs: docusaurus upgrade to v3;

--- a/docs/docs/how-to/load-configs.mdx
+++ b/docs/docs/how-to/load-configs.mdx
@@ -14,7 +14,8 @@ import UseConfigs from "!!raw-loader!./src/cfg/getters/main.go";
 
 There are different ways to load configurations into your application:
 
-<details><summary>From a file</summary>
+<details>
+<summary>From a file</summary>
 
 First, configure your project in a yaml file:
 
@@ -33,7 +34,8 @@ Here, you:
 
 </details>
 
-<details><summary>From a map</summary>
+<details>
+<summary>From a map</summary>
 
 <CodeBlock showLineNumbers language="go" title="main.go">{FromMap}</CodeBlock>
 
@@ -46,7 +48,8 @@ Here, you:
 
 </details>
 
-<details><summary>From individual settings</summary>
+<details>
+<summary>From individual settings</summary>
 
 <CodeBlock showLineNumbers language="go" title="main.go">{FromSetting}</CodeBlock>
 
@@ -59,7 +62,8 @@ Here, you've:
 
 </details>
 
-<details><summary>From multiple sources</summary>
+<details>
+<summary>From multiple sources</summary>
 
 <CodeBlock showLineNumbers language="go" title="main.go">{Main}</CodeBlock>
 
