--- a/docs/docs/how-to/logging/implement-a-log-handler.mdx
+++ b/docs/docs/how-to/logging/implement-a-log-handler.mdx
@@ -12,7 +12,8 @@ With the `cfg` and `log` packages, you can implement a handler and make it avail
 
 Here is a preview of all the code you'll cover in this guide:
 
-<details><summary>main.go</summary>
+<details>
+<summary>main.go</summary>
 <p>
 
 <CodeBlock showLineNumbers language="go">{LogHandler}</CodeBlock>
