--- a/docs/docs/how-to/write-health-checks.mdx
+++ b/docs/docs/how-to/write-health-checks.mdx
@@ -77,7 +77,8 @@ Here you'll walk through a complete example application of how you might impleme
 
 In `module.go`, add the following code:
 
-<details><summary>module.go</summary>
+<details>
+<summary>module.go</summary>
 <p>
 
 <CodeBlock showLineNumbers language="go">{Module}</CodeBlock>
@@ -126,7 +127,8 @@ And that's it! You've implemented custom health-check logic in your module.
 
 Now, add your app's `main.go` file:
 
-<details><summary>main.go</summary>
+<details>
+<summary>main.go</summary>
 <p>
 
 <CodeBlock showLineNumbers language="go">{Main}</CodeBlock>
@@ -136,7 +138,8 @@ Now, add your app's `main.go` file:
 
 Then, add your app's configuration, including health-checks:
 
-<details><summary>config.dist.yml.go</summary>
+<details>
+<summary>config.dist.yml.go</summary>
 <p>
 
 <CodeBlock showLineNumbers language="yaml">{ConfigDist}</CodeBlock>
