--- a/docs/docs/quickstart/create-a-consumer.mdx
+++ b/docs/docs/quickstart/create-a-consumer.mdx
@@ -44,7 +44,8 @@ Those are all the files you need to build your first consumer with gosoline! Nex
 
 In `consumer.go`, add the following code:
 
-<details><summary>consumer.go</summary>
+<details>
+<summary>consumer.go</summary>
 <p>
 
 <CodeBlock showLineNumbers language="go">{Consumer}</CodeBlock>
