--- a/docs/docs/quickstart/http-server/create-a-money-exchange-app.mdx
+++ b/docs/docs/quickstart/http-server/create-a-money-exchange-app.mdx
@@ -63,7 +63,8 @@ Those are all the files you need to build your web service with gosoline! Next, 
 
 In `handler.go`, add the following code:
 
-<details><summary>handler.go</summary>
+<details>
+<summary>handler.go</summary>
 
 <CodeBlock showLineNumbers language="go">{Handler}</CodeBlock>
 
@@ -128,7 +129,8 @@ Now, you've fully implemented your request handlers. Next, you'll create a `Defi
 
 In `definer.go`, add the following code:
 
-<details><summary>definer.go</summary>
+<details>
+<summary>definer.go</summary>
 
 <CodeBlock showLineNumbers language="go">{Definer}</CodeBlock>
 
@@ -182,7 +184,8 @@ At this point, you've implemented your handlers, a definer, and your app configu
 
 In `main.go`, add the following code:
 
-<details><summary>main.go</summary>
+<details>
+<summary>main.go</summary>
 
 <CodeBlock showLineNumbers language="go">{Main}</CodeBlock>
 
