--- a/docs/docs/quickstart/http-server/create-an-http-server.mdx
+++ b/docs/docs/quickstart/http-server/create-an-http-server.mdx
@@ -61,7 +61,8 @@ Those are all the files you need to build your web service with gosoline! Next, 
 
 In `handler.go`, add the following code:
 
-<details><summary>handler.go</summary>
+<details>
+<summary>handler.go</summary>
 <p>
 
 <CodeBlock showLineNumbers language="go">{Handler}</CodeBlock>
@@ -136,7 +137,8 @@ However, you still need a main entry point to your service, where you'll make us
 
 In `main.go`, add the following code:
 
-<details><summary>main.go</summary>
+<details>
+<summary>main.go</summary>
 <p>
 
 <CodeBlock showLineNumbers language="go">{Main}</CodeBlock>
