--- a/docs/docs/quickstart/http-server/write-crud-sql-app.mdx
+++ b/docs/docs/quickstart/http-server/write-crud-sql-app.mdx
@@ -186,7 +186,8 @@ Now, you've implemented the handlers and logic for a model-based CRUD API. Next,
 
 In `main.go`, add the following code:
 
-<details><summary>main.go</summary>
+<details>
+<summary>main.go</summary>
 <p>
 
 <CodeBlock showLineNumbers language="go">{Main}</CodeBlock>
