--- a/docs/docs/quickstart/testing/test-your-consumer.mdx
+++ b/docs/docs/quickstart/testing/test-your-consumer.mdx
@@ -14,13 +14,15 @@ In this tutorial, you'll create an integration test for a message queue consumer
 
 This tutorial tests a minimal application with the following files:
 
-<details><summary>config.dist.yml</summary>
+<details>
+<summary>config.dist.yml</summary>
 
 <CodeBlock showLineNumbers language="yaml">{ConfigDist}</CodeBlock>
 
 </details>
 
-<details><summary>consumer.go</summary>
+<details>
+<summary>consumer.go</summary>
 
 <CodeBlock showLineNumbers language="go" title="consumer.go">{Consumer}</CodeBlock>
 
@@ -31,7 +33,8 @@ This tutorial tests a minimal application with the following files:
 
 Here is a preview of all the code you'll cover in this tutorial:
 
-<details><summary>consumer_test.go</summary>
+<details>
+<summary>consumer_test.go</summary>
 
 <CodeBlock showLineNumbers language="go">{ConsumerTest}</CodeBlock>
 
