--- a/docs/docs/quickstart/testing/test-your-http-server.mdx
+++ b/docs/docs/quickstart/testing/test-your-http-server.mdx
@@ -70,7 +70,8 @@ Those are all the files you need to write your web service test with gosoline! N
 
 In `fixtures.go`, add the following code:
 
-<details><summary>fixtures.go</summary>
+<details>
+<summary>fixtures.go</summary>
 
 <CodeBlock showLineNumbers language="go">{Fixtures}</CodeBlock>
 
@@ -102,7 +103,8 @@ Now that you've defined fixtures for your test, it's time to implement the test 
 
 In `server_test.go`, add the following code:
 
-<details><summary>server_test.go</summary>
+<details>
+<summary>server_test.go</summary>
 
 <CodeBlock showLineNumbers language="go">{ServerTest}</CodeBlock>
 
