--- a/docs/docs/reference/package-cfg.mdx
+++ b/docs/docs/reference/package-cfg.mdx
@@ -93,7 +93,8 @@ fmt.Println(port)
 
 #### Related methods
 
-<details><summary>GetString()</summary>
+<details>
+<summary>GetString()</summary>
 
 ```go
 config := cfg.New()
@@ -105,7 +106,8 @@ if err != nil {
 
 </details>
 
-<details><summary>GetBool()</summary>
+<details>
+<summary>GetBool()</summary>
 
 ```go
 config := cfg.New()
