github: updated workflow for preview pages;

--- a/docs/docs/how-to/logging/log-context.mdx
+++ b/docs/docs/how-to/logging/log-context.mdx
@@ -12,7 +12,7 @@ In this guide, you'll add some logs to a CRUD server used for managing a "To do 
 
 :::info
 
-This tutorial is about logging, so you won't build the app here. However, if you'd like to learn how to build it, check out the [dedicated tutorial](/gosoline/quickstart/http-server/write-crud-sql-app).
+This tutorial is about logging, so you won't build the app here. However, if you'd like to learn how to build it, check out the [dedicated tutorial](/quickstart/http-server/write-crud-sql-app).
 
 :::
 
@@ -55,7 +55,7 @@ With Gosoline, you can initilize specific fields that you can use with a `Logger
 
 :::info
 
-Read more about appending and mutating context fields in our [log package reference](/gosoline/reference/package-log#appendcontextfields).
+Read more about appending and mutating context fields in our [log package reference](/reference/package-log#appendcontextfields).
 
 :::
 
